исправлен свагер и метод делит
